fix purchase view for member